--- a/src/content/posts/articles/hobgoblins.mdx
+++ b/src/content/posts/articles/hobgoblins.mdx
@@ -24,8 +24,12 @@ tags:
 
 [орков](https://cyborgsandmages.com/posts/articles/orcs-tactics-lore-encounters)
 
-[гоблинов]()
+[гоблинов](https://cyborgsandmages.com/posts/articles/goblins-tactics-lore-encounters)
 
-[дроу]()
+[дроу](https://cyborgsandmages.com/posts/articles/drow-tactics-lore-encounters)
 
-[дуэргаров]()
+[дуэргаров](https://cyborgsandmages.com/posts/articles/duergars-tactics-lore-encounters)
+
+[гноллей](https://cyborgsandmages.com/posts/articles/gnolls-tactics-lore-encounters)
+
+Весь перечень можно найти в [индексе статей по тактике существ](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
