--- a/src/content/posts/articles/goblins-tactics-lore-encounters.mdx
+++ b/src/content/posts/articles/goblins-tactics-lore-encounters.mdx
@@ -14,6 +14,7 @@ tags:
 
 Заметки Паланта про тактику, сведения и столкновения с гоблинами.
 
+в этой заметке таже присутсутсвуют таблицы по созданию боевой банды гоблинов.
 
 ## Первая версия
 
