--- a/src/content/posts/articles/docs-index.mdx
+++ b/src/content/posts/articles/docs-index.mdx
@@ -20,3 +20,5 @@ author: Phenomen
 не написано [Генераторы](https://cyborgsandmages.com/posts/articles/generators-component)
 
 [Справка по MDX](https://cyborgsandmages.com/posts/articles/using-mdx)
+
+не написано [Написание статей](https://cyborgsandmages.com/resources/authoring)
