--- a/src/content/posts/articles/duergars-tactics-lore-encounters.mdx
+++ b/src/content/posts/articles/duergars-tactics-lore-encounters.mdx
@@ -30,7 +30,7 @@ tags:
 
 ## Другие статьи
 
-[Инлекс статей про тактику существ](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index.mdx)
+[Инлекс статей про тактику существ](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
 
 [Орки](https://cyborgsandmages.com/posts/articles/orcs-tactics-lore-encounters)
 
