--- a/src/content/posts/translations/iskusstvo-rulingov-chast-xiii-skrytye-ili-otkrytye-stavki.mdx
+++ b/src/content/posts/translations/iskusstvo-rulingov-chast-xiii-skrytye-ili-otkrytye-stavki.mdx
@@ -1,15 +1,14 @@
 ---
 title: "Искусство рулингов. Часть XIII: Скрытые или открытые ставки"
+description: "Искусство рулингов. Часть XIII: Скрытые или открытые ставки - перевод статьи Джастина Александера."
 date: "2022-07-18"
-categories: 
-  - "alexandrian"
-tags: 
-  - "alexandrian"
-  - "justin-alexander"
-  - "translate"
+author: Justin Alexander
+translator: 'Станислав "Drakzar" Иванов'
+tags:
+- Искусство рулингов
+- Перевод
+- Alexandrian
 ---
-
-Перевод: Станислав Иванов
 
 Текст [Justin Alexander](https://vk.com/away.php?to=https://thealexandrian.net/about&cc_key=) от 10 января 2018 года
 
@@ -66,5 +65,3 @@ tags:
 Конечно, рано или поздно все мои игроки поймут, что этими проверками я зачастую изображаю мальчика, который кричал «Волк». Однако это неважно: более опытные герои не могут быть настолько же параноидальны и пугливы, как раньше, и набрасываться на воображаемые тени. Однако инструмент все еще можно использовать.
 
 И да, в опасной вселенной, наполненной [бродячими монстрами](https://vk.com/away.php?to=https%3A%2F%2Fthealexandrian.net%2Fwordpress%2F7897%2Froleplaying-games%2Fbreathing-life-into-the-wandering-monster&cc_key=), некоторые из проверок Внимательности, которыми вы концентрируете внимание стола, могут быть отнюдь не бессмысленными. 
-
-_Источник: < [https://vk.com/@dungeonsandsuffering-iskusstvo-rulingov-chast-xiii-skrytye-ili-otkrytye-stavki](https://vk.com/@dungeonsandsuffering-iskusstvo-rulingov-chast-xiii-skrytye-ili-otkrytye-stavki)\>_
