--- a/src/content/posts/articles/iskusstvo-rulinga-boj.mdx
+++ b/src/content/posts/articles/iskusstvo-rulinga-boj.mdx
@@ -1,13 +1,11 @@
 ---
 title: "Искусство рулинга: бой"
-description: "Искусство рулинга: бой - перевод статьи Джастина Александера."
+description: "Искусство рулинга: бой"
 date: "2022-07-18"
-author: Justin Alexander
 tags:
 - Искусство рулингов
-- Перевод
-- Alexandrian
 - Сражение
+- OSR
 ---
 
 Большинство игроков и ведущих, услышав про "rulings, not rules" и взяв поиграть какой-нибудь ретро-клон, первым делом начинают активно применять рулинги с тем, чтобы расширить набор доступных в бою тактических опций.
@@ -76,8 +74,6 @@ tags:
 
 Очень просто. Если предложенный игроком приём или решение может с таким же успехом применяться против очень широкой группы существ (гуманоидов, обладателей голов и так далее), стоит подумать о том, чтобы разрешить его по обычным правилам. (И снова; не отказывать в обработке заявки, а разрешить её по существующим правилам!)
 
-Почитайте, кстати, [вот эту заметку Дмитрия Герасимова](https://vk.com/away.php?to=http%3A%2F%2Fimaginaria.ru%2Fp%2Fpo-povodu-zayavok-i-umeniy.html&cc_key=). Она о навыках, но суть та же.
-
 Это, на мой взгляд, главные проблемные места. Большинство других импровизационных решений включает в себя использование характеристик местности, творческое применение заклинаний, обман, убеждение и подкуп и всё прочее, чему мы говорим твёрдое «да».
 
 В конце концов, даже в примере Мэттью Финча, с которым я не слишком согласен, фигурировала китайская ваза, а не просто игроки, которые придумывали крутые удары...
@@ -94,4 +90,5 @@ tags:
 
 Знаю, эту статью очень легко понять неправильно. Нет, я вовсе не призываю вас избегать любых рулингов и введения дополнительных правил в бою. Просто стоит заранее представлять, как это может повлиять на игру в целом, и понимать, что именно ты делаешь и зачем.
 
-_Источник: <[https://vk.com/@osr\_syndrome-iskusstvo-rulinga-boi](https://vk.com/@osr_syndrome-iskusstvo-rulinga-boi)\>_
+Источник: https://vk.com/@osr_syndrome-iskusstvo-rulinga-boi
+
