Filtering drafts; Link component;

--- a/src/content/posts/articles/using-mdx.mdx
+++ b/src/content/posts/articles/using-mdx.mdx
@@ -1,5 +1,4 @@
 ---
-draft: true
 title: Справка по MDX
 description: В этом руководстве вы узнаете об основах формата MDX, дополнительном синтаксисе и компонентах.
 date: 2023-01-01
@@ -204,6 +203,18 @@ import Creature from '~components/Creature.astro';
 <Aside v="gold">gold</Aside>
 <Aside v="wave">wave</Aside>
 <Aside v="crimson">crimson</Aside>
+
+### Ссылка
+
+```mdx
+<Link id="translations/slyflourish" />
+
+<Link id="translations/slyflourish" title="Свой заголовок для ссылки" />
+```
+
+<Link id="translations/slyflourish" />
+
+<Link id="translations/slyflourish" title="Свой заголовок для ссылки" />
 
 ### Стих
 
