--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -104,9 +104,16 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 ### Описание сеттингов на World Anvil
 
-[Not Forgotten Realms]()
+[Not Forgotten Realms](https://www.worldanvil.com/w/not-forgotten-realms-palant)
 
-[Eberron]()
+[Eberron](https://www.worldanvil.com/w/eberron-palant)
 
 
 ## Прочие наши ресурсы
+
+[Архив статей с сайта Киборгов и Чародеев на базе Wordpress](https://archivecyborgsandmages.wordpress.com/) - служит лишь для хранения архива статей и переводов
+
+[Старый блог Киборгов и Чародеев на Wordpress](https://cyborgsandmages.wordpress.com/) не поддерживается
+
+[Старый блог Лига Авантюристов](https://adventurersleague.wordpress.com/) не поддерживается
+
