--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -42,13 +42,25 @@ Core d20 RPG - это проект по написанию набора прав
 
 Собрание предысторий, которые можно использовать в играх Лиги. Русская и английская версии.
 
-[Собрание предысторий Лиги Авантюристов - скачать]()
+[Собрание предысторий Лиги Авантюристов 0.97 - скачать](/files/downloads/al-backgrounds-compendium-097.pdf)
+
+[Собрание предысторий Лиги Авантюристов 1.01 - скачать](/files/downloads/al-backgrounds-compendium-101.pdf)
+
+[Собрание предысторий Лиги Авантюристов 1.02 - скачать](/files/downloads/al-backgrounds-compendium-102.pdf)
+
+[Собрание предысторий Лиги Авантюристов 0.90 (на русском языке) - скачать](/files/downloads/al-compendium-of-al-backgrounds-rus-v.0.9.0.pdf)
 
 ### Бестиарий Лиги
 
 Собрание уникальных статблоков из Лиги Авантюристов (незаконченное)
 
-[Бестиарий Лиги Авантюристов - скачать]()
+[Бестиарий Лиги Авантюристов - скачать](/files/downloads/al_tome_of_foes-v-0-6-3.pdf)
+
+### Руководство Мастера по Парнасту
+
+[Скачать Руководство Мастера по Парнасту](/files/downloads/parnast.pdf)
+
+[Скачать Руководство Мастера по Парнасту](/files/downloads/parnast-master-guide-.pdf)
 
 ## Материалы размещенные на dmsguild.com
 
