--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -58,7 +58,8 @@ Core d20 RPG - это проект по написанию набора прав
 
 ### Руководство Мастера по Парнасту
 
-[Скачать Руководство Мастера по Парнасту](/files/downloads/parnast.pdf)
+[Скачать ПАРНАСТ В 1491 ЛД Описание города и основных персонажей в
+нем.](/files/downloads/parnast.pdf)
 
 [Скачать Руководство Мастера по Парнасту](/files/downloads/parnast-master-guide-.pdf)
 
@@ -112,7 +113,27 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 ### Бестиарии на critter.db
 
-[Бестиарий на critterdb]()
+[Бестиарий на critterdb Characters](https://critterdb.com/#/bestiary/view/5cf132ef98f7d95a859e3d25)
+
+https://hackmd.io/@palikhov/critterdb
+
+C&M Bestiary [Palant] v00 https://critterdb.com/#/publishedbestiary/view/6242250f078eb00317b488c5
+
+C&M Bestiary [Palant] v01 https://critterdb.com/#/publishedbestiary/view/5e6c576d86b61d2ce9783d90
+
+C&M Goblinoids [Palant] https://critterdb.com/#/publishedbestiary/view/618128e4af3aa903ed253f19
+
+C&M Guards Pack [Palant] https://critterdb.com/#/publishedbestiary/view/618127ebaf3aa903ed253eb7
+
+C&M Soldiers [Palant] https://critterdb.com/#/publishedbestiary/view/6181281faf3aa903ed253edc
+
+C&M Baldur's Gate [Palant] https://critterdb.com/#/publishedbestiary/view/618128b3af3aa903ed253f07
+
+C&M Baldur's Gate [Palant] v02 https://critterdb.com/#/publishedbestiary/view/5e6c5edc86b61d2ce9783e55
+
+C&M Deadly Marches [Palant] https://critterdb.com/#/publishedbestiary/view/6242266b078eb00317b4892b
+
+C&M Cormyr [Palant] https://critterdb.com/#/publishedbestiary/view/618126ebaf3aa903ed253ea3
 
 ### Описание сеттингов на World Anvil
 
