--- a/src/content/posts/translations/iskusstvo-rulingov-chast-xiv-gruppovye-dejstviya.mdx
+++ b/src/content/posts/translations/iskusstvo-rulingov-chast-xiv-gruppovye-dejstviya.mdx
@@ -1,12 +1,13 @@
 ---
-title: 'Искусство рулингов. Часть XIV: Групповые действия'
-description: Перевод статьи Джастина Александера Искусство рулингов. Групповые действия
+title: "Искусство рулингов. Часть XIV: Групповые действия"
+description: "Искусство рулингов. Часть XIV: Групповые действия - перевод статьи Джастина Александера."
+date: "2022-07-18"
 author: Justin Alexander
-translator: Станислав Иванов
-date: 2022-07-18
+translator: 'Станислав "Drakzar" Иванов'
 tags:
-  - Alexandrian
-  - Переводы
+- Искусство рулингов
+- Перевод
+- Alexandrian
 ---
 
 _Текст Justin Alexander от 25 января 2018 года_
