--- a/src/content/posts/articles/soell-counterspell-identification.mdx
+++ b/src/content/posts/articles/soell-counterspell-identification.mdx
@@ -8,10 +8,10 @@ tags:
   - Магия
 ---
 
-Реакцией заклинатель может попытаться определить какое заклинание сотворяет другой заклинатель проверкой Интеллекта (Аркана) с УС 10 + уровень сотворяемого заклинания.
+Реакцией заклинатель может попытаться определить какое заклинание сотворяет другой заклинатель проверкой **Интеллекта (Аркана)** с КС 10 + уровень сотворяемого заклинания.
 
-Заклинатель также может попытаться определить заклинание по начальным жестам и вербальным компонентам — за свободное действие но с УС 10+2*уровень сотворяемого заклинания.
+Заклинатель также может попытаться определить заклинание по начальным жестам и вербальным компонентам — за свободное действие но с КС 10+2*уровень сотворяемого заклинания.
 
-Для того чтобы сотворить Counterspell необходимо знать против какого заклинания ты его сотворяешь и какие у этого заклинания особенности.
+Для того чтобы сотворить **Counterspell** необходимо знать против какого заклинания ты его сотворяешь и какие у этого заклинания особенности.
 
-Сотворяющий заклинание заклинатель может попытаться ввести в заблуждение своих противников — потратив реакцию на обманное сотворение — и тогда контрзаклинателю необходимо будет пройти проверку Арканы дважды — один раз против УС заклинания, а второй раз против проверки Обмана заклинателя.
+Сотворяющий заклинание заклинатель может попытаться ввести в заблуждение своих противников — потратив реакцию на обманное сотворение — и тогда контрзаклинателю необходимо будет пройти проверку **Арканы** дважды — один раз против КС заклинания, а второй раз против проверки Обмана заклинателя.
