--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -89,6 +89,40 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 [Одного разу на постоялому дворі](https://www.dmsguild.com/product/437719/----?affiliate_id=759617)
 
+Baldur’s Mouth Newspaper Template https://www.dmsguild.com/product/315373/Baldurs-Mouth-Newspaper-Template?affiliate_id=759617
+
+Salvation bases and missions in tables https://www.dmsguild.com/product/309280/Salvation-bases-and-missions-in-tables?affiliate_id=759617
+
+Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Armors and Helmets
+https://www.dmsguild.com/product/278467/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Armors-and-Helmets?affiliate_id=759617
+
+Coins of Forgotten Realms in tables
+https://www.dmsguild.com/product/314838/Coins-of-Forgotten-Realms-in-tables?affiliate_id=759617
+
+Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Boots
+https://www.dmsguild.com/product/296982/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Boots?affiliate_id=759617
+
+Languages of Forgotten Realms in Table
+https://www.dmsguild.com/product/308995/Languages-of-Forgotten-Realms-in-Table?affiliate_id=759617
+
+Baldur’s Gate in Tables
+https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617
+
+City Watch of Baldur’s Gate
+https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617
+
+Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate
+https://www.dmsguild.com/product/276163/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate?affiliate_id=759617
+
+Palant Excel Inventory template
+https://www.dmsguild.com/product/247019/Palant-Excel-Inventory-template?affiliate_id=759617
+
+Palant’s Guide to Combat
+https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617
+Auril Frostmaiden’s Holy Symbol
+https://www.dmsguild.com/product/317569/Auril-Frostmaidens-Holy-Symbol?affiliate_id=759617
+
+
 
 
 
