--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -184,3 +184,6 @@ C&M Cormyr [Palant] https://critterdb.com/#/publishedbestiary/view/618126ebaf3aa
 
 [Старый блог Лига Авантюристов](https://adventurersleague.wordpress.com/) не поддерживается
 
+## HOMEBREWERY
+
+[GITHUB CNM HOMEBREWERY](https://github.com/palikhov/CnM-Homebrewery)
