--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -50,6 +50,8 @@ Core d20 RPG - это проект по написанию набора прав
 
 [Собрание предысторий Лиги Авантюристов 0.90 (на русском языке) - скачать](/files/downloads/al-compendium-of-al-backgrounds-rus-v.0.9.0.pdf)
 
+[Собрание предысторий Лиги Авантюристов 1.01 (на русском языке, r00t edition) - скачать](/files/downloads/al-compendium-of-al-backgrounds-rus-v.0.9.0.pdf)
+
 ### Бестиарий Лиги
 
 Собрание уникальных статблоков из Лиги Авантюристов (незаконченное)
@@ -58,14 +60,15 @@ Core d20 RPG - это проект по написанию набора прав
 
 ### Руководство Мастера по Парнасту
 
-[Скачать ПАРНАСТ В 1491 ЛД Описание города и основных персонажей в
-нем.](/files/downloads/parnast.pdf)
+[Скачать ПАРНАСТ В 1491 ЛД Описание города и основных персонажей в нем.](/files/downloads/parnast.pdf)
 
 [Скачать Руководство Мастера по Парнасту](/files/downloads/parnast-master-guide-.pdf)
 
 ## Материалы размещенные на dmsguild.com
 
 Все наши материалы размещенные в Гильдии Мастеров.
+
+[Материалы Антона Палихова]()
 
 electrum [Waterdeep in tables](https://www.dmsguild.com/product/247012/Waterdeep-in-tables?affiliate_id=759617)
 
@@ -89,42 +92,31 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 [Одного разу на постоялому дворі](https://www.dmsguild.com/product/437719/----?affiliate_id=759617)
 
-Baldur’s Mouth Newspaper Template https://www.dmsguild.com/product/315373/Baldurs-Mouth-Newspaper-Template?affiliate_id=759617
+[Baldur’s Mouth Newspaper Template](https://www.dmsguild.com/product/315373/Baldurs-Mouth-Newspaper-Template?affiliate_id=759617)
 
-Salvation bases and missions in tables https://www.dmsguild.com/product/309280/Salvation-bases-and-missions-in-tables?affiliate_id=759617
+[Salvation bases and missions in tables](https://www.dmsguild.com/product/309280/Salvation-bases-and-missions-in-tables?affiliate_id=759617)
 
-Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Armors and Helmets
-https://www.dmsguild.com/product/278467/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Armors-and-Helmets?affiliate_id=759617
+[Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Armors and Helmets](https://www.dmsguild.com/product/278467/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Armors-and-Helmets?affiliate_id=759617)
 
-Coins of Forgotten Realms in tables
-https://www.dmsguild.com/product/314838/Coins-of-Forgotten-Realms-in-tables?affiliate_id=759617
+[Coins of Forgotten Realms in tables](https://www.dmsguild.com/product/314838/Coins-of-Forgotten-Realms-in-tables?affiliate_id=759617)
 
-Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Boots
-https://www.dmsguild.com/product/296982/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Boots?affiliate_id=759617
+[Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate — Boots](https://www.dmsguild.com/product/296982/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate—Boots?affiliate_id=759617)
 
-Languages of Forgotten Realms in Table
-https://www.dmsguild.com/product/308995/Languages-of-Forgotten-Realms-in-Table?affiliate_id=759617
+[Languages of Forgotten Realms in Table](https://www.dmsguild.com/product/308995/Languages-of-Forgotten-Realms-in-Table?affiliate_id=759617)
 
-Baldur’s Gate in Tables
-https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617
+[Baldur’s Gate in Tables](https://www.dmsguild.com/product/294548/Baldurs-Gate-in-Tables?affiliate_id=759617)
 
-City Watch of Baldur’s Gate
-https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617
+[City Watch of Baldur’s Gate](https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617)
 
-Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate
-https://www.dmsguild.com/product/276163/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate?affiliate_id=759617
+[Sorcerous Sundries — Compendium of Magic Items from Baldur’s Gate](https://www.dmsguild.com/product/276163/Sorcerous-Sundries—Compendium-of-Magic-Items-from-Baldurs-Gate?affiliate_id=759617)
 
-Palant Excel Inventory template
-https://www.dmsguild.com/product/247019/Palant-Excel-Inventory-template?affiliate_id=759617
+[Palant Excel Inventory template](https://www.dmsguild.com/product/247019/Palant-Excel-Inventory-template?affiliate_id=759617)
 
-Palant’s Guide to Combat
-https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617
-Auril Frostmaiden’s Holy Symbol
-https://www.dmsguild.com/product/317569/Auril-Frostmaidens-Holy-Symbol?affiliate_id=759617
+[Palant’s Guide to Combat](https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617)
 
+[Auril Frostmaiden’s Holy Symbol](https://www.dmsguild.com/product/317569/Auril-Frostmaidens-Holy-Symbol?affiliate_id=759617)
 
-
-
+[Материалы Дмитрия Нелюбова]()
 
 
 ## Материалы размещенные на drivethrurpg.com
@@ -134,6 +126,8 @@ https://www.dmsguild.com/product/317569/Auril-Frostmaidens-Holy-Symbol?affiliate
 [E5E Palant Notes about Combat, 1](https://www.drivethrurpg.com/product/379531/E5E--Palant-Notes-about-Combat-Issue-1?affiliate_id=759617)
 
 [E5E Palant Notes about Combat, 2](https://www.drivethrurpg.com/product/400474/E5E--Palant-Notes-about-Combat-Issue-2?affiliate_id=759617)
+
+[Про тиры]()
 
 ## Прочие наши материалы и Проекты
 
