--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -180,4 +180,6 @@ C&M Cormyr [Palant] https://critterdb.com/#/publishedbestiary/view/618126ebaf3aa
 
 ## HOMEBREWERY
 
+[РУКОВОДСТВО HOMEBREWERY]()
+
 [GITHUB CNM HOMEBREWERY](https://github.com/palikhov/CnM-Homebrewery)
