--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -143,25 +143,25 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 [Бестиарий на critterdb Characters](https://critterdb.com/#/bestiary/view/5cf132ef98f7d95a859e3d25)
 
-https://hackmd.io/@palikhov/critterdb
+[Ссылки на бестиарии на hackmd](https://hackmd.io/@palikhov/critterdb)
 
-C&M Bestiary [Palant] v00 https://critterdb.com/#/publishedbestiary/view/6242250f078eb00317b488c5
+[C&M Bestiary v00](https://critterdb.com/#/publishedbestiary/view/6242250f078eb00317b488c5)
 
-C&M Bestiary [Palant] v01 https://critterdb.com/#/publishedbestiary/view/5e6c576d86b61d2ce9783d90
+[C&M Bestiary v01](https://critterdb.com/#/publishedbestiary/view/5e6c576d86b61d2ce9783d90)
 
-C&M Goblinoids [Palant] https://critterdb.com/#/publishedbestiary/view/618128e4af3aa903ed253f19
+[C&M Goblinoids](https://critterdb.com/#/publishedbestiary/view/618128e4af3aa903ed253f19)
 
-C&M Guards Pack [Palant] https://critterdb.com/#/publishedbestiary/view/618127ebaf3aa903ed253eb7
+[C&M Guards Pack](https://critterdb.com/#/publishedbestiary/view/618127ebaf3aa903ed253eb7)
 
-C&M Soldiers [Palant] https://critterdb.com/#/publishedbestiary/view/6181281faf3aa903ed253edc
+[C&M Soldiers](https://critterdb.com/#/publishedbestiary/view/6181281faf3aa903ed253edc)
 
-C&M Baldur's Gate [Palant] https://critterdb.com/#/publishedbestiary/view/618128b3af3aa903ed253f07
+C&M Baldur's Gate [Palant] (https://critterdb.com/#/publishedbestiary/view/618128b3af3aa903ed253f07)
 
-C&M Baldur's Gate [Palant] v02 https://critterdb.com/#/publishedbestiary/view/5e6c5edc86b61d2ce9783e55
+C&M Baldur's Gate [Palant] v02 (https://critterdb.com/#/publishedbestiary/view/5e6c5edc86b61d2ce9783e55)
 
-C&M Deadly Marches [Palant] https://critterdb.com/#/publishedbestiary/view/6242266b078eb00317b4892b
+C&M Deadly Marches [Palant] (https://critterdb.com/#/publishedbestiary/view/6242266b078eb00317b4892b)
 
-C&M Cormyr [Palant] https://critterdb.com/#/publishedbestiary/view/618126ebaf3aa903ed253ea3
+C&M Cormyr [Palant] (https://critterdb.com/#/publishedbestiary/view/618126ebaf3aa903ed253ea3)
 
 ### Описание сеттингов на World Anvil
 
