--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -116,7 +116,16 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 [Auril Frostmaiden’s Holy Symbol](https://www.dmsguild.com/product/317569/Auril-Frostmaidens-Holy-Symbol?affiliate_id=759617)
 
-[Материалы Дмитрия Нелюбова]()
+[Faerunian names - excel generator](https://www.dmsguild.com/product/439131/Faerunian-names--excel-generator?affiliate_id=759617)
+
+[Progress Clocks](https://www.dmsguild.com/product/317711/Progress-clocks?affiliate_id=759617)
+
+[Palant Word Template](https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617)
+
+[Материалы Дмитрия Нелюбова](https://www.dmsguild.com/browse.php?author=Dmitry%20Nelyubov)
+
+[D20 Military trinket](https://www.dmsguild.com/product/261535/D20-Military-trinket?affiliate_id=759617)
+
 
 
 ## Материалы размещенные на drivethrurpg.com
