--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -5,14 +5,14 @@ description: Проекты и материалы, созданные Кибор
 
 ## Подборки ресурсов
 
-**RPG RESOURCES COMPENDIUM**
+### **RPG RESOURCES COMPENDIUM**
+
 [RPG Resources Compendium](https://1drv.ms/w/s!Atcrhwwo1lBA1-JYy7A4n58SAwonWQ?e=fywbzI)
 
 **Киборги и Чародеи - Ресурсы для мастеров**
 [Ресурсы для Мастеров](https://docs.google.com/document/d/1xhlWkdWvxc7a8Av0Z3pRM6knh8iDqLqe-UcmOnRcZXc/edit?usp=sharing)
 
-**Киборги и Чародеи - Общие ресурсы**
-https://docs.google.com/document/d/1kTmUlLBEBorm8O4o6HnZEhUb3-_pazgNMUig6nkwr_w/edit?usp=sharing
+[**Киборги и Чародеи - Общие ресурсы**](https://docs.google.com/document/d/1kTmUlLBEBorm8O4o6HnZEhUb3-_pazgNMUig6nkwr_w/edit?usp=sharing)
 
 ## Core d20 RPG (Бывший E5E)
 
@@ -68,7 +68,7 @@ Core d20 RPG - это проект по написанию набора прав
 
 Все наши материалы размещенные в Гильдии Мастеров.
 
-[Материалы Антона Палихова]()
+### [Материалы Антона Палихова]()
 
 electrum [Waterdeep in tables](https://www.dmsguild.com/product/247012/Waterdeep-in-tables?affiliate_id=759617)
 
@@ -122,7 +122,7 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 [Palant Word Template](https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617)
 
-[Материалы Дмитрия Нелюбова](https://www.dmsguild.com/browse.php?author=Dmitry%20Nelyubov)
+### [Материалы Дмитрия Нелюбова](https://www.dmsguild.com/browse.php?author=Dmitry%20Nelyubov)
 
 [D20 Military trinket](https://www.dmsguild.com/product/261535/D20-Military-trinket?affiliate_id=759617)
 
@@ -132,9 +132,13 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 Все наши материалы опубликованные на Drivethrurpg.com
 
+### [Cyborgs and Mages]()
+
 [E5E Palant Notes about Combat, 1](https://www.drivethrurpg.com/product/379531/E5E--Palant-Notes-about-Combat-Issue-1?affiliate_id=759617)
 
 [E5E Palant Notes about Combat, 2](https://www.drivethrurpg.com/product/400474/E5E--Palant-Notes-about-Combat-Issue-2?affiliate_id=759617)
+
+### [C&W]()
 
 [Про тиры]()
 
@@ -164,13 +168,13 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 [C&M Soldiers](https://critterdb.com/#/publishedbestiary/view/6181281faf3aa903ed253edc)
 
-C&M Baldur's Gate [Palant] (https://critterdb.com/#/publishedbestiary/view/618128b3af3aa903ed253f07)
+[C&M Baldur's Gate](https://critterdb.com/#/publishedbestiary/view/618128b3af3aa903ed253f07)
 
-C&M Baldur's Gate [Palant] v02 (https://critterdb.com/#/publishedbestiary/view/5e6c5edc86b61d2ce9783e55)
+[C&M Baldur's Gate v02](https://critterdb.com/#/publishedbestiary/view/5e6c5edc86b61d2ce9783e55)
 
-C&M Deadly Marches [Palant] (https://critterdb.com/#/publishedbestiary/view/6242266b078eb00317b4892b)
+[C&M Deadly Marches](https://critterdb.com/#/publishedbestiary/view/6242266b078eb00317b4892b)
 
-C&M Cormyr [Palant] (https://critterdb.com/#/publishedbestiary/view/618126ebaf3aa903ed253ea3)
+[C&M Cormyr](https://critterdb.com/#/publishedbestiary/view/618126ebaf3aa903ed253ea3)
 
 ### Описание сеттингов на World Anvil
 
@@ -178,6 +182,11 @@ C&M Cormyr [Palant] (https://critterdb.com/#/publishedbestiary/view/618126ebaf3a
 
 [Eberron](https://www.worldanvil.com/w/eberron-palant)
 
+## НЕОПУБЛИКОВАННОЕ
+
+СМЕРТЕЛЬНЫЕ ПРЕДЕЛЫ
+
+РУКОВОДСТВО ПО ВЫЖИВАНИЮ И ИССЛЕДОВАНИЮ
 
 ## Прочие наши ресурсы
 
@@ -190,5 +199,7 @@ C&M Cormyr [Palant] (https://critterdb.com/#/publishedbestiary/view/618126ebaf3a
 ## HOMEBREWERY
 
 [РУКОВОДСТВО HOMEBREWERY]()
+
+Все необходимое для работы с Homebrewery выложено в соответствующем репозитории.
 
 [GITHUB CNM HOMEBREWERY](https://github.com/palikhov/CnM-Homebrewery)
