--- a/src/content/posts/articles/about-mass-combat-draft-of-troop-rules-1.mdx
+++ b/src/content/posts/articles/about-mass-combat-draft-of-troop-rules-1.mdx
@@ -16,22 +16,40 @@ tags:
 Практически все существующие правила для толп и отрядов существ обладают теми или иными недостатками, которые меня не особо устраивают. Собственно, это первый драфт правил, которые возможно будут меня как то устраивать.
 
 Guard [1/8]
+
 *Medium humanoid (any race), any alignment*
+
 **Armor Class** 14 (chain shirt, shield), 16 with shield
+
 **Hit Points** 11/5 [18/9] (2d8 + 2)
+
 **Speed** 30 ft.
+
 STR	DEX	CON	INT	WIS	CHA
+
 13 (+1)	12 (+1)	12 (+1)	10(+0)	11(+0)	10(+0)
+
 **Skills** Perception +2
+
 **Senses** passive Perception 12
+
 **Languages** Common, one racial or regional language
+
 **Challenge** 1/8 (25 XP) 	**Proficiency Bonus** +2
+
 **Level** 1
+
 **Morale** normal
+
 Actions
+
 **Spear.** Melee or Ranged Weapon Attack: +3 to hit, reach 5 ft. or range 20/60 ft., one target. Hit: 4 (1d6 + 1) piercing damage, or 5 (1d8 + 1) piercing damage if used with two hands to make a melee attack.
+
 Variant Actions
-**Mace.** Melee Weapon Attack: +3 to hit, reach 5 ft., one target. Hit: 4 (1d6 + 1) bludgeoning damage.
+
+**Mace.** Melee Weapon Attack: +3 to hit, reach 5 ft., one 
+target. Hit: 4 (1d6 + 1) bludgeoning damage.
+
 **Light crossbow.** Ranged Weapon Attack: +3 to hit, range 80/320 ft., one target. Hit: 5 (1d8 + 1) piercing damage.
 
 ## Правила для копья на поле боя
@@ -42,14 +60,23 @@ Variant Actions
 ## Создание копья
 
 **Минимальное количество:** 6
+
 **Размер:** на 1 категорию больше за каждые 4 существа
 Количество костей хитов: сумма костей хитов существ
+
 **Хиты:** определяются по костям хитов
-**Средние хиты члена отряда:** определяются по усредненному количеству костей хитов.
+
+**Средние хиты члена отряда:** определяются по усредненному 
+количеству костей хитов.
+
 **Класс Защиты:** средний для существ
+
 **Скорость:** минимальная скорость существ
+
 **Количество атак:** зависит от варианта построения
+
 **Урон:** такой же как у базового существа
+
 **Боевой дух:** средний среди солдат с учетом модификатора лидера.
 
 ## Общие свойства копий
@@ -120,21 +147,41 @@ Variant Actions
 Если линия взгляда стрелка к цели проходит через копье, то цель считается имеющей полное укрытие, только если прямая линия не обеспечивается каким либо другим образом (например для великана, который заслонен бойцами).
 
 Lance of Guards [10x1/8]
+
 *Formed formation of 10 Medium humanoids (any race), any alignment*
+
 **Armor Class** 18 (chain shirt, shield, formed), 20 in defensive stance
+
 **Hit Points** 110/55 [180/90] (20d8 + 20); 11 hp threshold
+
 **Speed** 30 ft.
+
 STR	DEX	CON	INT	WIS	CHA
+
 13 (+1)	12 (+1)	12 (+1)	10(+0)	11(+0)	10(+0)
+
 **Skills** Perception +2
+
 **Senses** passive Perception 12
+
 **Languages** Common, one racial or regional language
+
 **Challenge** 1/8 (25 XP) 	**Proficiency Bonus** +2
+
 **Level** 1	**Morale** normal
+
 **Troop.**
-**Formed formation.** Копье в сформированном строю совершает 1 атаку за 2 существ, получает двойной урон от площадных атак которые воздействуют на весь отряд (автоматически при этом проваливая спасброски). Урон равномерно распределяется по отряду.
+
+**Formed formation.** Копье в сформированном строю совершает 1 
+атаку за 2 существ, получает двойной урон от площадных атак 
+которые воздействуют на весь отряд (автоматически при этом проваливая спасброски). Урон равномерно распределяется по отряду.
+
 **Defensive stance.** Если копье в сформированном строю обладают щитами и не верхом, то оно может принять защитное построение и получить дополнительный бонус +2 к КЗ, при отсутствии щитов этот бонус составляет +1. Также копье в защитном строю получает бонус +2 к проверкам боевого духа и спасброскам от страха. Перестроение в защитный строй возможно если копье на этом ходу не совершало никаких действий кроме движения и не находится в ближнем бою с противником.
+
 Actions
+
 **Multiattack.** Lance of guards makes 5 melee or ranged weapon attacks.
+
 **Spear.** Melee or Ranged Weapon Attack: +5 to hit, reach 5 ft. or range 20/60 ft., one target. Hit: 4 (1d6 + 1) piercing damage, or 5 (1d8 + 1) piercing damage if used with two hands to make a melee attack.
+
 **Spear volley.** Ranged Weapon Attack, range 20/60 ft., area 100 sq.ft., any creatures in area must succeed on Dexterity Saving Throw DC 13. If failed – creature takes 3d6+3 piercing damage, or half on success.
