--- a/src/content/posts/articles/about-mass-combat-dnd-part-1.mdx
+++ b/src/content/posts/articles/about-mass-combat-dnd-part-1.mdx
@@ -1,5 +1,5 @@
 ---
-title: Про мвссовые сражения в D&D
+title: Про массовые сражения в D&D, часть 1
 description: Рассуждения про массовые сражения в приключениях D&D и способах их оцифровки
 date: 2023-06-21
 tags:
@@ -37,3 +37,5 @@ tags:
 По моему скромному мнению, второй вариант обладает существенным недостатком, чтобы серьезно использоваться - слишком велика погрешность бросков, которые могут привести к нулевому урону. Да и влияние площадных атак на отряд при этом слишком понижается.
 
 (Продолжение следует)
+
+См.также [Зарисовка правил для отряда существ (копья), часть 1](/posts/articles/about-mass-combat-draft-of-troop-rules-1.mdx)
