--- a/src/content/posts/articles/dmsguild-silver-marches-1.mdx
+++ b/src/content/posts/articles/dmsguild-silver-marches-1.mdx
@@ -1,16 +1,13 @@
 ---
-title: Публикация на DMSGUILD - Серебряные пределы - SM01
-description: На DMSGUILD опубликовано описание сеттинга Серебряные пределы в 1493 г ЛД в Забытых Королевствах. Пока доступна версия Плати сколько хочешь.
+title: "Публикация на DMSGUILD - Серебряные пределы - SM01"
+description: "На DMSGUILD опубликовано описание сеттинга Серебряные пределы в 1493 г ЛД в Забытых Королевствах. Пока доступна версия Плати сколько хочешь."
 date: 2023-06-29
 tags:
-  - Серебряные пределы
-  - dmsguild
-  - worldographer
-  - карта
-  - сеттинг
-author: example
-translator: example
-cover: example
+  - "Серебряные пределы"
+  - "dmsguild"
+  - "worldographer"
+  - "карта"
+  - "сеттинг"
 ---
 
 На DMSGUILD опубликовано описание сеттинга Серебряные пределы в 1493 г ЛД в Забытых Королевствах. Пока доступна версия Плати сколько хочешь.
