--- a/src/content/posts/articles/dmsguild-silver-marches-1.mdx
+++ b/src/content/posts/articles/dmsguild-silver-marches-1.mdx
@@ -15,3 +15,8 @@ tags:
 Этот материал написан был давно, но все как то руки не доходили выложить.
 
 [Серебряные пределы](https://www.dmsguild.com/product/294523/--SM01)
+
+[Карта отдельным файлом](https://1drv.ms/i/s%2521Atcrhwwo1lBA3ux0ral9BeUyjwkVRQ?e%253DJekbfg)
+
+
+
