--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -42,6 +42,10 @@ Core d20 RPG - это проект по написанию набора прав
 
 Собрание предысторий, которые можно использовать в играх Лиги. Русская и английская версии.
 
+Зачем вообще защищать этот город, у меня хватает денег переехать в любой другой, да и ситуация тут напряженная, то одна проблема, то другая, может то что, я тут родился, рос, влюбился и сыграл свадьбу, купил домик, что тут живут мои родители, и тетя Хавилар, у которой на чердаке мы играли в детстве, и булочная,которая снабжает нас ароматной выпечкой постоянно, и ее владелец проявляющий замашки крохобора, но тающий сердцем и понимающий голиаф Маверик, помогавший нам, когда мы несколько лет подряд были на мели. Это вот все падет под испепеляющей яростью и отравляющими воздух амбициями. Черепа будут растоптано, длинные языки прибиты к доскам объявлений, и книги сожжены. Может это поможет мне найти мотивацию взять в руки меч, и в рядах сотоварищей выйти на битву? Если у вас еще нет собрания предысторий Лиги Авантюристов, то держите.
+
+
+В данном документе собраны все опциональные предыстории, которые выходили начиная с первого сезона Лиги Авантюристов а также альтернативные свойства / связи / умения, которые предлагаются в приключениях - альтернативные умения предысторий в Тирании Драконов и Из Бездны, дополнительные связи для персонажей из Мулмастера или Хиллсфара, предыстории из недавно вышедших приключений Guild Adept - Еретик, Детектив. 
 [Собрание предысторий Лиги Авантюристов 0.97 - скачать](/files/downloads/al-backgrounds-compendium-097.pdf)
 
 [Собрание предысторий Лиги Авантюристов 1.01 - скачать](/files/downloads/al-backgrounds-compendium-101.pdf)
@@ -68,7 +72,7 @@ Core d20 RPG - это проект по написанию набора прав
 
 Все наши материалы размещенные в Гильдии Мастеров.
 
-### [Материалы Антона Палихова]()
+### [Материалы Антона Палихова]([Title](https://www.dmsguild.com/browse.php?author%253DAnton%2520Palikhov))
 
 electrum [Waterdeep in tables](https://www.dmsguild.com/product/247012/Waterdeep-in-tables?affiliate_id=759617)
 
@@ -84,7 +88,6 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 [Horses of Forgotten Realms](https://www.dmsguild.com/product/317625/Horses-of-Forgotten-Realms?affiliate_id=759617)
 
-[Salvation bases and missions in tables](https://www.dmsguild.com/product/309280/Salvation-bases-and-missions-in-tables?affiliate_id=759617)
 
 [Palant's Guide to Combat](https://www.dmsguild.com/product/305891/Palants-Guide-to-Combat?affiliate_id=759617)
 
@@ -122,6 +125,11 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 [Palant Word Template](https://www.dmsguild.com/product/294551/City-Watch-of-Baldurs-Gate?affiliate_id=759617)
 
+[Серебрянные пределы SM-01](https://www.dmsguild.com/product/294523/--SM01?affiliate_id%253D759617)
+
+[Coins of Forgotten Realms in tables](https://www.dmsguild.com/product/314838/Coins-of-Forgotten-Realms-in-tables?affiliate_id=759617)
+
+
 ### [Материалы Дмитрия Нелюбова](https://www.dmsguild.com/browse.php?author=Dmitry%20Nelyubov)
 
 [D20 Military trinket](https://www.dmsguild.com/product/261535/D20-Military-trinket?affiliate_id=759617)
@@ -132,15 +140,26 @@ copper [Herbs of Forgotten Realms](https://www.dmsguild.com/product/291511/Herbs
 
 Все наши материалы опубликованные на Drivethrurpg.com
 
-### [Cyborgs and Mages]()
+### [Cyborgs and Mages]([Title](https://www.drivethrurpg.com/browse/pub/16416/Cyborgs-and-Mages))
 
 [E5E Palant Notes about Combat, 1](https://www.drivethrurpg.com/product/379531/E5E--Palant-Notes-about-Combat-Issue-1?affiliate_id=759617)
 
 [E5E Palant Notes about Combat, 2](https://www.drivethrurpg.com/product/400474/E5E--Palant-Notes-about-Combat-Issue-2?affiliate_id=759617)
 
-### [C&W]()
+### [C&W](https://www.drivethrurpg.com/browse/pub/15748/CampW)
 
-[Про тиры]()
+[Тиры и растировка в пятой редакции. Почему это важно и как использовать.](https://www.drivethrurpg.com/product/398025/-----------?manufacturers_id%253D15748))
+
+[Д30 граффити зомби-апокалипсиса](https://www.drivethrurpg.com/product/292905/30--?affiliate_id=759617)
+
+[Full_Deck_Method_Safety_Tool UA](https://www.drivethrurpg.com/product/309095/FullDeckMethodSafetyTool-UA?affiliate_id%253D759617)
+
+[Full_Deck_Method_Safety_Tool RUS](https://www.drivethrurpg.com/product/305774/FullDeckMethodSafetyTool-RUS?affiliate_id%253D759617)
+
+[Баталия](https://www.drivethrurpg.com/product/383637/?affiliate_id%253D759617)
+
+[Sphere Cube Cone: Spell ](https://www.drivethrurpg.com/product/321159/Sphere-Cube-Cone-Spell-Template?affiliate_id%253D759617)
+
 
 ## Прочие наши материалы и Проекты
 
